[gd_scene load_steps=4 format=2]

[ext_resource path="res://App.gd" type="Script" id=1]
[ext_resource path="res://NVE_Entity.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_top = 2
border_color = Color( 0, 0, 0, 1 )

[node name="App" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
nve_entity_scene = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 14.0
text = "NVE-App"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1010.0
margin_bottom = 42.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 882.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Bitte ihre NVE/SSCC hier eingeben..."

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 886.0
margin_right = 953.0
margin_bottom = 24.0
rect_min_size = Vector2( 67, 0 )
hint_tooltip = "Prüfziffer

Wenn nichts angegeben, wird diese Berechnet"
max_length = 1
placeholder_text = "Prüfziffer"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 957.0
margin_right = 1010.0
margin_bottom = 24.0
text = "Prüfen"

[node name="Response_Label" type="Label" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 1010.0
margin_bottom = 60.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Entity_List" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_top = 2.0
margin_right = 1010.0
margin_bottom = 522.0

[node name="Label" type="RichTextLabel" parent="VBoxContainer/PanelContainer/Entity_List"]
margin_right = 1010.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
bbcode_enabled = true
bbcode_text = "[u]gespeicherte NVEs:[/u]"
text = "gespeicherte NVEs:"
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="VBoxContainer/HBoxContainer/LineEdit" method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/LineEdit" to="VBoxContainer/HBoxContainer/LineEdit" method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEdit" to="VBoxContainer/HBoxContainer/LineEdit" method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/LineEdit2" to="." method="_on_LineEdit2_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
